# zynksec

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.override.example.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_review.yml
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py  0002_scans_scan_profile.py  0003_targets_table.py  0004_scan_groups_table.py  0005_scans_assigned_queue.py  0006_scans_failure_reason.py  0007_code_findings_table.py  0008_sprint2_semgrep_schema.py  0009_code_finding_line_nullable.py
apps/api/src/zynksec_api/: __init__.py  celery_client.py  config.py  db.py  exceptions.py  logging_config.py  main.py  observability.py
apps/api/src/zynksec_api/routers/: _project_resolution.py  health.py  scan_groups.py  scans.py  targets.py
apps/api/src/zynksec_api/schemas/: __init__.py  code_finding.py  finding.py  scan.py  scan_group.py  target.py
apps/web/: README.md  package.json
apps/worker/: README.md  pyproject.toml
apps/worker/src/zynksec_worker/: __init__.py  celery_app.py  config.py  observability.py
apps/worker/src/zynksec_worker/runners/: __init__.py  gitleaks_runner.py  osv_runner.py  semgrep_runner.py  trivy_runner.py  zap_runner.py
apps/worker/src/zynksec_worker/tasks/: __init__.py  _execution.py  scan.py  scan_group.py
docs/: 01_scoping_and_roadmap.md  02_product_strength_and_foundations.md  03_architecture.md  04_phase0_scaffolding.md
docs/architecture/: zap-resource-tuning.md
docs/screenshots/: README.md
infra/compose/: postgres-init.sql
infra/docker/: api.Dockerfile  code-worker.Dockerfile  worker.Dockerfile
target-lab/: README.md  compose-targets.yml
target-lab/dvwa/: entrypoint-wrapper.sh
tests/fixtures/: gitfixture-server.py  gitfixture.Dockerfile
tests/fixtures/iac-plants/: Dockerfile.bad  README.md  pod.yaml
tests/fixtures/osv-plants/: README.md  package-lock.json  package.json
tests/fixtures/semgrep-plants/: README.md  eval_handler.py  pickle_loader.py  shell_runner.py
tests/integration/: conftest.py  docker-compose.test.yml  test_aggressive_dvwa.py  test_aggressive_scan.py  test_correlation_id_propagation.py  test_gitleaks_scan.py  test_osv_scan.py  test_phase3_coverage_gaps.py  test_project_resolution.py  test_ready_endpoint.py  test_request_validation_envelope.py  test_safe_active_scan.py  test_scan_group_rollup.py  test_scan_groups.py  test_scan_profile.py  test_scans_roundtrip.py  test_scans_target_id.py  test_semgrep_scan.py  test_targets.py  test_trivy_scan.py  test_zap_against_juice_shop.py
tests/unit/: test_clone_env.py  test_gitleaks_classify.py  test_gitleaks_failure_message.py  test_gitleaks_redact.py  test_observability_scrub.py  test_osv_classify.py  test_scan_root_perms.py  test_semgrep_classify.py  test_trivy_classify.py  test_validate_clone_url.py
