[project]
name = "zynksec-api"
version = "0.0.0"
description = "Zynksec FastAPI service."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Zynksec Maintainers" }]
dependencies = [
  "fastapi>=0.115,<0.116",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<0.33",
  "structlog>=24,<25",
  # Pinned so Week 2 (DB models) doesn't have to touch this file again.
  # Imported lazily; Week 1 does not yet open a connection.
  "psycopg[binary,pool]>=3.2,<4",
  "zynksec-schema",
]

[project.scripts]
zynksec-api = "zynksec_api.main:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zynksec_api"]

[tool.uv.sources]
zynksec-schema = { workspace = true }
