[project]
name = "zynksec-api"
version = "0.0.0"
description = "Zynksec FastAPI service."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Zynksec Maintainers" }]
dependencies = [
  "fastapi>=0.116,<0.117",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<0.33",
  "structlog>=24,<25",
  "psycopg[binary,pool]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "celery>=5.4,<6",
  "redis>=5.2,<6",
  # Week-4 observability: error capture into GlitchTip.  The fastapi
  # extra transitively pulls the starlette integration which attaches
  # middleware and captures unhandled exceptions from request handlers.
  # No-ops when SENTRY_DSN is unset (zynksec_api.observability).
  "sentry-sdk[fastapi]>=2.0,<3",
  "zynksec-schema",
  "zynksec-db",
]

[project.scripts]
zynksec-api = "zynksec_api.main:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zynksec_api"]

[tool.uv.sources]
zynksec-schema = { workspace = true }
zynksec-db = { workspace = true }
